[project]
name = "gke-log-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk[a2a,agent-identity]>=2.1.0",
    "google-cloud-aiplatform>=1.155.0",
    "google-cloud-bigquery>=3.41.0",
    "google-cloud-geminidataanalytics>=0.13.0",
    "google-cloud-storage>=2.14.0",
    "google-genai",
    "python-dotenv",
    "google-cloud-logging",
    "google-cloud-monitoring",
    "google-cloud-dataplex",
    "cloudpickle>=3.1.2",
    "pandas",
    "gradio>=4.0.0",
    "mcp>=1.28.1",
    "db-dtypes",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-exporter-gcp-trace>=1.12.0",
    "opentelemetry-exporter-gcp-logging>=1.12.0a0",
]
